Cross shadow DOM boundaries for :-webkit-full-screen-ancestor

BUG=631245

Review-Url: https://codereview.chromium.org/2287353002
Cr-Commit-Position: refs/heads/master@{#416267}

Former-commit-id: a2a0e98d3249fe12469ea5ede7658b02c88113e9